# projeto_jornal_email

./: README.md  pyproject.toml
email_app/: models.py  urls.py  views.py
email_app/migrations/: 0001_initial.py  0002_subscribers_dayedition.py  0003_alter_subscribers_total_subscribers.py  0004_remove_subscribers_total_subscribers.py  0005_subscribers_total_subscribers.py  0006_remove_subscribers_total_subscribers.py
email_app/templates/: email_visualizer.html  homepage.html  subscribe_page.html
system_manager/: settings.py  urls.py
templates/: base.html
templates/static/css/: css.css
templates/static/css/newsletter/: newsletter.css
