[tool.poetry]
name = "projeto_jornal_email"
version = "0.1.0"
description = ""
authors = ["Gabriel Maires <gabriel.maires12@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.1"
Pillow = "^9.2.0"
python-decouple = "^3.6"

[tool.poetry.dev-dependencies]
mypy = "^0.971"
flake8 = "^5.0.4"
autopep8 = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
